syntax = "proto3";
option go_package = "gok/proto";

package gok;

// import "google/protobuf/empty.proto";

service Auth {
  rpc SignIn (SignInRequest) returns (SignInResponse);
  rpc Login (LoginRequest) returns (LoginResponse);

  // Internal methods for cross-service communication.
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

message User {
  int32 ID = 1;
  string login = 2;
}

message UserForAdd {
  string login = 2;
}

message SignedUser {
  string token = 1;
  string key = 2;
}

////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

message SignInRequest {
  UserForAdd user = 1;
}
message SignInResponse {
  SignedUser user = 1;
}

message LoginRequest {
  UserForAdd user = 1;
}
message LoginResponse {
  SignedUser user = 1;
}

message GetUserRequest {
  string token = 1;
}
message GetUserResponse {
  User user = 1;
}
